vbnc/vbnc/tests/Errors/32006-4.vb
Imports System
Class T
    Const M_String As int64 = "#"c
End Class